[package]
name = "regex-lexer-lalrpop"
version = "0.2.1" # remember to change html_root_url
authors = ["Gwenhwyfar Hartshaw <ghartshaw@gmail.com>", "Sandeep Datta <datta.sandeep@gmail.com>"]
edition = "2018"
description = "A regex-based lexer (tokenizer)"
readme = "README.md"
homepage = "https://github.com/sandeep-datta/regex-lexer-lalrpop"
repository = "https://github.com/sandeep-datta/regex-lexer-lalrpop"
license = "MIT OR Apache-2.0"
keywords = ["lexer", "tokenizer", "regex", "parsing"]
categories = ["parsing"]

[dependencies]
regex = "1"
